--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
        <!-- Pesan -->
        <p id="pesan3">Ciee.. Ada yang Ultah Nih 🤣❤️</p>
        <p id="pesan4">Happy Birthday, </p>
-       <p id="pesan5" class="gaya2">Nambah tua aja ya, hehe</p>
+       <p id="pesan5" class="gaya2">28 Desember 2024, hari ini 
+	       Bulan Desember berbisik pada dunia
+	       Tahun baru hanya tinggal menghitung jari,
+	       Namun, ada sesuatu yang lebih penting daripada waktu,
+	       Sesuatu yang tak pernah bisa dihitung,
+	       Seperti bertambahnya usia bumi,
+	       Dan bertambahnya usia seorang perempuan bernama Syadrina.
+       </p>
        <p id="pesan6" class="gaya2">Moga panjang umur biar tiap tahun bisa traktirin aku wkwk 😆❤️</p>
        <p id="pesan7" class="gaya2">Sehat selalu ya!</p>
 
