--- a/index.html
+++ b/index.html
@@ -71,16 +71,36 @@
        <!-- Pesan -->
        <p id="pesan3">Ciee.. Ada yang Ultah Nih 🤣❤️</p>
        <p id="pesan4">Happy Birthday, </p>
-       <p id="pesan5" class="gaya2">28 Desember 2024, hari ini 
-	       Bulan Desember berbisik pada dunia
+       <p id="pesan5" class="gaya2">28 Desember 2024, hari ini
+	       Bulan Desember berbisik pada dunia,
 	       Tahun baru hanya tinggal menghitung jari,
 	       Namun, ada sesuatu yang lebih penting daripada waktu,
 	       Sesuatu yang tak pernah bisa dihitung,
 	       Seperti bertambahnya usia bumi,
 	       Dan bertambahnya usia seorang perempuan bernama Syadrina.
        </p>
-       <p id="pesan6" class="gaya2">Moga panjang umur biar tiap tahun bisa traktirin aku wkwk 😆❤️</p>
-       <p id="pesan7" class="gaya2">Sehat selalu ya!</p>
+       <p id="pesan6" class="gaya2">Syadrina, atau yang kita kenal sebagai Asya,
+	       Gadis cantik asal Bandung,
+	       Dengan senyum yang bisa menenangkan dunia,
+	       Berada jauh di Padalarang,
+	       Aku tak bisa menahan tanya,
+	       Kenapa harus di Bandung? Kenapa bukan di Lampung, agar aku lebih dekat?
+	       Tapi apalah arti jarak,
+	       Karena yang membuatmu berharga bukan tempat,
+	       Tapi bagaimana dunia menjadi lebih indah dengan keberadaanmu.</p>
+       <p id="pesan7" class="gaya2">Hari ini, di ulang tahunmu yang ke-18,
+	       Aku hanya bisa memberi doa
+	       Semoga semua yang kamu impikan tercapai,
+	       Semoga setiap langkahmu membawa kebahagiaan,
+	       Semoga dunia memudahkan jalanmu,
+	       Dan semoga aku semakin dekat dengan hatimu, hehe 😂
+	       Pokoknya, doa terbaik untukmu, Syadrina.
+
+	       اللَّهُمَّ اجْعَلْ سَنَتِي هَذِهِ سَنَةَ خَيْرٍ وَبَرَكَةٍ وَرَحْمَةٍ وَمَغْفِرَةٍ وَعَفْوٍ
+
+	       Ya Allah, jadikanlah tahun ini penuh dengan kebaikan, berkah, rahmat, ampunan, dan kebebasan dari segala dosa.
+
+	       Aamiin.</p>
 
        <p id="pesan8" class="gaya2">Canda wkwwk :v</p>
        <p id="pesan9" class="gaya2">Oh iya, semoga di hari spesialmu ini kamu dapat menjadi pribadi yang lebih baik yaa.. 🥳❤️</p>
