--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 	       Dan semoga aku semakin dekat dengan hatimu, hehe 😂
 	       Pokoknya, doa terbaik untukmu, Syadrina.
 
-	       اللَّهُمَّ اجْعَلْ سَنَتِي هَذِهِ سَنَةَ خَيْرٍ وَبَرَكَةٍ وَرَحْمَةٍ وَمَغْفِرَةٍ وَعَفْوٍ
+	       <p>اللَّهُمَّ اجْعَلْ سَنَتِي هَذِهِ سَنَةَ خَيْرٍ وَبَرَكَةٍ وَرَحْمَةٍ وَمَغْفِرَةٍ وَعَفْوٍ</p>
 
-	       Ya Allah, jadikanlah tahun ini penuh dengan kebaikan, berkah, rahmat, ampunan, dan kebebasan dari segala dosa.
+	       <p>Ya Allah, jadikanlah tahun ini penuh dengan kebaikan, berkah, rahmat, ampunan, dan kebebasan dari segala dosa.</p>
 
 	       Aamiin.</p>
 
