--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 	       Dan semoga aku semakin dekat dengan hatimu, hehe 😂
 	       Pokoknya, doa terbaik untukmu, Syadrina.
 
-	       <p>اللَّهُمَّ اجْعَلْ سَنَتِي هَذِهِ سَنَةَ خَيْرٍ وَبَرَكَةٍ وَرَحْمَةٍ وَمَغْفِرَةٍ وَعَفْوٍ</p>
+	       <br></br>اللَّهُمَّ اجْعَلْ سَنَتِي هَذِهِ سَنَةَ خَيْرٍ وَبَرَكَةٍ وَرَحْمَةٍ وَمَغْفِرَةٍ وَعَفْوٍ
 
-	       <p>Ya Allah, jadikanlah tahun ini penuh dengan kebaikan, berkah, rahmat, ampunan, dan kebebasan dari segala dosa.</p>
+	       <br></br>Ya Allah, jadikanlah tahun ini penuh dengan kebaikan, berkah, rahmat, ampunan, dan kebebasan dari segala dosa.
 
-	       Aamiin.</p>
+	       <br></br>Aamiin.</p>
 
        <p id="pesan8" class="gaya2">Canda wkwwk :v</p>
        <p id="pesan9" class="gaya2">Oh iya, semoga di hari spesialmu ini kamu dapat menjadi pribadi yang lebih baik yaa.. 🥳❤️</p>
