--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 	
    <!-- Ganti Audio di sini -->
-   <audio src="https://feeldreams.github.io/djikhlas.mp3" id="linkmp3" class="sembunyi"></audio>
+   <audio src="https://kioshappyio.github.io/HBD-asya/DJikhlas.mp3" id="linkmp3" class="sembunyi"></audio>
    
    <div id="bodyblur">
      <!-- Wallpaper --><img src="https://feeldreams.github.io/wp9.jpg" id="wallpaper"/><div id="beneranblur"></div>
@@ -38,20 +38,20 @@
    <div id='Content'>
 
      <div id="kadoIn">
-       <!-- Tombol Surat --><img src="https://feeldreams.github.io/kadoin.png"/>
+       <!-- Tombol Surat --><img src="https://kioshappyio.github.io/HBD-asya/kadoin.png"/>
      </div>
      <p id="ket">Klik Kadonya!</p>
 
      <div class="kumpulanstiker">
          <!-- Stiker untuk Konten -->
-         <img src="https://feeldreams.github.io/bunga.gif" id="fotostiker"/>
-         <img src="https://feeldreams.github.io/pusn.gif" id="fotostiker1"/>
-         <img src="https://feeldreams.github.io/pandacoklat.gif" id="fotostiker2"/>
-         <img src="https://feeldreams.github.io/cilukba.gif" id="fotostiker3"/>
-         <img src="https://feeldreams.github.io/pandakuning.gif" id="fotostiker4"/>
-         <img src="https://feeldreams.github.io/emawh.gif" id="fotostiker5"/>
+         <img src="https://kioshappyio.github.io/HBD-asya/bunga.gif" id="fotostiker"/>
+         <img src="https://kioshappyio.github.io/HBD-asya/pusn.gif" id="fotostiker1"/>
+         <img src="https://kioshappyio.github.io/HBD-asya/pandacoklat.gif" id="fotostiker2"/>
+         <img src="https://kioshappyio.github.io/HBD-asya/cilukba.gif" id="fotostiker3"/>
+         <img src="https://kioshappyio.github.io/HBD-asya/pandakuning.gif" id="fotostiker4"/>
+         <img src="https://kioshappyio.github.io/HBD-asya/emawh.gif" id="fotostiker5"/>
          
-         <img src="https://feeldreams.github.io/pandacoklat.gif" id="fotostiker6"/>
+         <img src="https://kioshappyio.github.io/HBD-asya/pandacoklat.gif" id="fotostiker6"/>
      </div>
      
      <p id="halo" class="halo"></p>
