--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
 <head>
 <title>Script HTML buat Kamu</title>
-<link rel="icon" type="image/x-icon" href="">
+<link rel="icon" type="image/x-icon" href="https://airohunter.io">
 <meta name="description" content="HTML Ubuntu Coding">
 <!-- 
   Made with love by Key!
@@ -43,7 +43,7 @@
      <p id="ket">Klik Kadonya!</p>
 
      <div class="kumpulanstiker">
-         <!-- Stiker untuk Konten -->
+         
          <img src="https://kioshappyio.github.io/HBD-asya/bunga.gif" id="fotostiker"/>
          <img src="https://kioshappyio.github.io/HBD-asya/pusn.gif" id="fotostiker1"/>
          <img src="https://kioshappyio.github.io/HBD-asya/pandacoklat.gif" id="fotostiker2"/>
@@ -71,13 +71,14 @@
        
        <p id="pesan3">Ciee.. Ada yang Ultah Nih 🤣❤️</p>
        <p id="pesan4">Happy Birthday, </p>
-       <p id="pesan5" class="gaya2">28 Desember 2024, hari ini
+       <p id="pesan5" class="gaya2"><b>Doa bulan desember</b>
+	       <br></br>28 Desember 2024, hari ini
 	       Bulan Desember berbisik pada dunia,
 	       Tahun baru hanya tinggal menghitung jari,
 	       Namun, ada sesuatu yang lebih penting daripada waktu,
 	       Sesuatu yang tak pernah bisa dihitung,
 	       Seperti bertambahnya usia bumi,
-	       Dan bertambahnya usia seorang mahluk manis sepertimu😘.
+	       Dan bertambahnya usia sesosok mahluk manis sepertimu😘.
        </p>
        <p id="pesan6" class="gaya2">Syadrina, atau yang biasa kupanggil Asya,
 	       Gadis cantik asal Bandung,
@@ -92,9 +93,9 @@
 	       Aku hanya bisa memberi doa
 	       Semoga semua yang kamu impikan tercapai,
 	       Semoga setiap langkahmu membawa kebahagiaan,
-	       Semoga dunia memudahkan jalanmu,
+	       Semoga tuhan memudahkan jalanmu,
 	       Dan semoga aku semakin dekat dengan hatimu, hehe 😂
-	       Pokoknya, doa terbaik selalu kupanjatkan untukmu.
+	       Pokoknya, doa terbaik selalu kupanjatkan buatmu, syasya tepung bumbu😂.
 
 	       <br></br>اللَّهُمَّ اجْعَلْ سَنَتِي هَذِهِ سَنَةَ خَيْرٍ وَبَرَكَةٍ وَرَحْمَةٍ وَمَغْفِرَةٍ وَعَفْوٍ
 
