--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
 <head>
 <title>Script HTML buat Kamu</title>
-<link rel="icon" type="image/x-icon" href="https://airohunter.io">
+<link rel="icon" type="image/x-icon" href="">
 <meta name="description" content="HTML Ubuntu Coding">
 <!-- 
   Made with love by Key!
